--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,9 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+<!-- <a href="/sitemap/">Sitemap</a> -->
 <!-- end custom footer snippets -->
+<footer>
+  <p>Address: 932 Lushan S Rd, Yuelu District, Changsha, Hunan, China</p>
+  <p>Post: 410017</p>
+  <p>Tel: +86 15367487503</p>
+  <p>E-mail: yxlukarov@gmail.com</p>
+</footer>
